--- a/src/components/HomeMain.css
+++ b/src/components/HomeMain.css
@@ -2,11 +2,55 @@
     .home-main {
         height: 304.95vh;
     }
+
+    .home-testimonials-left-arrow,
+    .home-testimonials-right-arrow {
+        height: 3.6%;
+        flex-basis: 3.7%;
+    }
+
+    .home-hero {
+        flex-basis: calc(500% / 23);
+    }
+    
+    .home-highlights {
+        flex-basis: calc(600% / 23);
+    }
+    
+    .home-testimonials {
+        flex-basis: calc(600% / 23);
+    }
+    
+    .home-about {
+        flex-basis: calc(600% / 23);
+    }
 }
 
 @media (max-width: 599px) {
     .home-main {
-        height: 105vh;
+        height: 100vh;
+    }
+
+    .home-testimonials-left-arrow,
+    .home-testimonials-right-arrow {
+        height: 3.6%;
+        flex-basis: 0.7%;
+    }
+
+    .home-hero {
+        flex-basis: 22%;
+    }
+    
+    .home-highlights {
+        flex-basis: 28%;
+    }
+    
+    .home-testimonials {
+        flex-basis: 28%;
+    }
+    
+    .home-about {
+        flex-basis: 22%;
     }
 }
 
@@ -19,7 +63,6 @@
 
 .home-hero {
     flex-shrink: 0;
-    flex-basis: calc(500% / 23);
     width: 60%;
     padding-left: 20%;
     padding-right: 20%;
@@ -31,7 +74,6 @@
 
 .home-highlights {
     flex-shrink: 0;
-    flex-basis: calc(600% / 23);
     width: 60%;
     padding-left: 20%;
     padding-right: 20%;
@@ -64,7 +106,6 @@
 
 .home-testimonials {
     flex-shrink: 0;
-    flex-basis: calc(600% / 23);
     width: 70%;
     padding-left: 15%;
     padding-right: 15%;
@@ -80,7 +121,6 @@
     width: 60%;
     padding-left: 20%;
     padding-right: 20%;
-    flex-basis: calc(600% / 23);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -250,22 +290,6 @@ h5 {
     padding-left: 1vw;
     height: 2.5vw;
     font-size: 1vw;
-}
-
-@media (min-width: 600px) {
-    .home-testimonials-left-arrow,
-    .home-testimonials-right-arrow {
-        height: 3.6%;
-        flex-basis: 3.7%;
-    }
-}
-
-@media (max-width: 599px) {
-    .home-testimonials-left-arrow,
-    .home-testimonials-right-arrow {
-        height: 3.6%;
-        flex-basis: 3.7%;
-    }
 }
 
 .home-testimonials-left-arrow {
